<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="text_view_name">Name:</string>
    <string name="text_view_location">Location:</string>
    <string name="start_ride_button">Start Ride</string>
    <string name="update_ride_button">Update Ride</string>
    <string name="list_rides_button">List Rides</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_start">Start Ride</string>
    <string name="nav_update">Update Ride</string>
    <string name="add_ride_dialog_title">Add Scooter?</string>
    <string name="delete_ride_dialog_title">Delete Scooter?</string>
    <string name="update_ride_dialog_title">Update Scooter?</string>
</resources>