<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="8pt" />

    <Button
        android:id="@+id/start_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_ride_button" />

    <Button
        android:id="@+id/update_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_ride_button" />

    <Button
        android:id="@+id/list_rides_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_rides_button" />

    <ListView
        android:id="@+id/list_rides_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>