<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".StartRideFragment"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_name" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:autofillHints="0"
            android:labelFor="@id/text_view_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_view_location" />

        <EditText
            android:id="@+id/edit_text_location"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:autofillHints="0"
            android:labelFor="@id/text_view_location"
            android:inputType="text" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/start_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_ride_button" />

</LinearLayout>